[tool.poetry]
name = "nlp-notebooks"
version = "0.1.0"
description = "NLP Notebooks adaptable to specific use cases."
authors = ["Michael Nau <michaelwnau@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^1.3.3"
numpy = "^1.21.2"
scikit-learn = "^1.0.2"
spacy = "^3.1.0"
nltk = "^3.6.5"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"
jupyterlab = "^3.1.16"
ipywidgets = "^7.6.5"
ipympl = "^0.8.8"
ipyvue = "^1.8.1"
tiktoken = "^0.6.0"
scrapy = "^2.11.1"
tensorflow = "^2.8.0"
pyzmq = "^25.1.2"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
